# tech-challenge-2

./: .gitignore  README.md  pyproject.toml
quotations/: Aave.csv  BNB.csv  Bitcoin.csv  Cardano.csv  Chainlink.csv  Cosmos.csv  Cronos.csv  Dai.csv  Decentraland.csv  Dogecoin.csv  Ethereum.csv  Flow.csv  Injective.csv  Kaspa.csv  Monero.csv  Nexo.csv  Pepe.csv  ShibaInu.csv  Solana.csv  Stacks.csv  THORChain.csv  Tezos.csv
tech_challenge_2/: README.md  ag.py  app.py  coins.py  view.py
