[tool.poetry]
name = "tech-challenge-2"
version = "0.1.0"
description = ""
authors = ["Romulo Assis <romulo.assis@ifood.com.br>"]
readme = "README.md"
packages = [{ include = "tech_challenge_2/coins.py" }]


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
streamlit = "^1.41.1"

[tool.poetry.scripts]
dev = "tech_challenge_2.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
